# sovereign

./: .env.example  .gitignore  =3.9.0  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: CODE-ISTRUCT-001.md  PHASE-I-STATUS.md  PHASE-II-STATUS.md  PROJECT-SOVERIGN.md  index.md
docs/bugs/: runtime-adapter-test-lockup-fix.md  test-lockup-issue.md
docs/development/: index.md  phase1_core_infrastructure_plan.md  phase2_llm_integration_plan.md  phase3_cli_ux_plan.md  phase4_advanced_features_plan.md  sovereign_development_next_steps.md
docs/reference/: execution-model.md  index.md  opcodes.md  syntax.md
docs/tutorials/: first-program.md  index.md  installation.md
examples/: using_environment_variables.py
scripts/: dev-setup.sh  quality-check.sh  run-examples.sh  run-tests.sh
src/project_sovereign/: __init__.py  __main__.py  config.py
src/project_sovereign/agents/: __init__.py  evolution_engine.py  model_manager.py  ollama_client.py  runtime_adapter.py
src/project_sovereign/cli/: __init__.py  main.py
src/project_sovereign/core/: __init__.py  ast_nodes.py  interpreter.py  opcodes.py  parser.py
src/project_sovereign/vm/: __init__.py  virtual_machine.py
tests/: conftest.py
tests/integration/: test_llm_opcodes.py  test_programs.py
tests/unit/: test_config.py  test_llm_integration.py  test_memory_limits.py  test_opcodes.py  test_parser.py  test_vm.py
